@@ -10,6 +10,11 @@
 	'set link' or 'set nonlinear' commands. Do not fill in the
 	axis->linked_to_* fields until after the points of potential failure.
 
+	* src/eval.c src/eval.h (free_at): afl-fuzz found multiple crashes
+	caused by trying to evaluate a defunct action table.  This patch wraps
+	free_at() in a macro that clears the pointer to an action table after
+	freeing it.
+
 2016-08-11  Ethan A Merritt  <merritt@u.washington.edu>
 
 	* src/plot2d.c (box_range_fiddling):  afl-fuzz found a crash caused by
